gl31-master/src/test/deca/context/valid/sansobjet/affect_int_float.deca
// Description:
//    Affectation et typage : associe un int a un float
//
// Resultats:
//    Ligne 15: Affectation de types compatibles
//
// Historique:
//    cree le 08/01/2021

{
   float a;
   int b;

   // Doit etre accepte.
   a = b;
}
